[package]
name = "x509-signature"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "ISC"

[dependencies]
ring = { version = "0.16.12", default-features = false }
untrusted = "0.7.0"
w = { package = "webpki", version = "0.21.2", optional = true, default-features = false }
r = { package = "rustls", version = "0.17.0", optional = true }

[features]
default = ["rsa"]
rsa = ["ring/alloc"]
webpki = ["w"]
rustls = ["r", "std"]
std = ["w/std"]