[package]
name = "x509-signature"
version = "0.5.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Low-level X.509 parsing and signature verification library"
repository = "https://github.com/paritytech/x509-signature"
keywords = ["X509", "ASN1", "cryptography", "pki"]

[dependencies]
ring = { version = "0.16.15", default-features = false }
untrusted = "0.7.1"
w = { package = "webpki", version = "0.21.3", optional = true, default-features = false }
r = { package = "rustls", version = "0.19", optional = true }

[dev-dependencies]
chrono = "0.4.13"

[features]
default = ["rsa"]
rsa = ["ring/alloc"]
webpki = ["w"]
rustls = ["r", "std"]
std = ["w/std"]
